--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
     
 
-        <div class="book">
+        <!-- <div class="book">
             <span class="title">Title</span>
             <span class="author">Author</span>
             <span class="pages">Pages</span>
             <span ><button class="haveRead">Read</button></span> 
             <span class="delete"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"><path d="M13.05 42q-1.25 0-2.125-.875T10.05 39V10.5H8v-3h9.4V6h13.2v1.5H40v3h-2.05V39q0 1.2-.9 2.1-.9.9-2.1.9Zm21.9-31.5h-21.9V39h21.9Zm-16.6 24.2h3V14.75h-3Zm8.3 0h3V14.75h-3Zm-13.6-24.2V39Z"/></svg></span>
-        </div>
+        </div> -->
 
         <div class="book newBookButton">
             <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M25.5 29.1h3v-6.6h6.6v-3h-6.6v-6.6h-3v6.6h-6.6v3h6.6ZM13 38q-1.2 0-2.1-.9-.9-.9-.9-2.1V7q0-1.2.9-2.1.9-.9 2.1-.9h28q1.2 0 2.1.9.9.9.9 2.1v28q0 1.2-.9 2.1-.9.9-2.1.9Zm0-3h28V7H13v28Zm-6 9q-1.2 0-2.1-.9Q4 42.2 4 41V10h3v31h31v3Zm6-37v28V7Z"/></svg>
