Make the Modal design - still have to add functionality

--- a/index.html
+++ b/index.html
@@ -55,8 +55,33 @@
     
     </div>
     
+<dialog class="modal" >
 
+<h1>Add A New Book</h1>
 
+<form action="" class="newBookForm" method="dialog" >
+
+<label for="title">Book Name</label>
+<input type="text" name="title">
+
+<label for="author">Author</label>
+<input type="text" name="author">
+
+<label for="pages">Pages</label>
+<input type="number" name="pages">
+
+<div class="haveReadCheckbox">
+<label for="haveRead">Have you read it?</label>
+<input type="checkbox" name="haveRead">
+</div>
+
+<button class="addToLibrary">Add to Library</button>
+
+</form>
+
+<span class="close"><svg class='close' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50"><path d="m12.45 37.65-2.1-2.1L21.9 24 10.35 12.45l2.1-2.1L24 21.9l11.55-11.55 2.1 2.1L26.1 24l11.55 11.55-2.1 2.1L24 26.1Z"/></svg></span>
+
+</dialog>
 
 
 
